<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/edit_delete_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_delete_dialog"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_delete_text"
        android:text="@string/edit_delete_dialog_edit" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/edit_button"
        android:layout_below="@+id/edit_delete_text"
        android:text="@string/edit_delete_dialog_delete" />

</RelativeLayout>
