<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spinner_get_cards"
    android:orientation="vertical" >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/show_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="0.5"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/get_cards"
        card_view:elevation="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/get_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:text="@string/get_card_string"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <FrameLayout
                android:id="@+id/mail_spinner_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_below="@+id/get_card_text"
                android:background="@drawable/spinner_get_cards" >

                <Spinner
                    android:id="@+id/mail_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/spinner_get_cards"
                    android:textColor="@color/get_cards_text" />

                <ImageView
                    android:id="@+id/mail_spinner_drop"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|right"
                    android:background="@drawable/drop_down" />
            </FrameLayout>



            <TextView
                android:id="@+id/get_card_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mail_spinner_frame"
                android:layout_margin="5dp"
                android:text="@string/get_card_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/get_card_email"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/get_card_enter_email"
                android:inputType="textEmailAddress" >
            </EditText>

            <Button
                android:id="@+id/entry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/email_text"
                android:layout_margin="5dp"
                android:onClick="entryButtonClick"
                android:text="@string/get_card_entry_button" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>