<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/addFromDrive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_current"
            android:layout_marginTop="2dp"
            android:onClick="addFromDrive"
            android:text="@string/add_from_drive" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/show_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="currentOnClick"
            card_view:cardBackgroundColor="@color/current_roster_card"
            card_view:elevation="15dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp" >

                <TextView
                    android:id="@+id/currentNav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/rosterListQuick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/currentNav"
                    android:onClick="callQuickPoll"
                    android:text="@string/roster_list_quick"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/rosterListCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/currentNav"
                    android:onClick="callCreateRoster"
                    android:text="@string/roster_list_create"
                    android:visibility="visible" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <view
            android:id="@+id/recycler_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            class="android.support.v7.widget.RecyclerView" />
    </LinearLayout>

</LinearLayout>