<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/entry_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/first_buttons"
            card_view:elevation="5dp" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/rosterNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/enterName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rosterNameLabel"
                    android:ems="10"
                    android:hint="@string/new_roster_name" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/enterId"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/enterName"
                    android:ems="10"
                    android:hint="@string/new_roster_id"
                    android:inputType="numberSigned" />

                <Button
                    android:id="@+id/addToRoster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/enterId"
                    android:onClick="addEntry"
                    android:text="@string/add_roster_entry" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/doneEditingRoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@+string/done_editing_roster"
            android:onClick="callDialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <view
            android:id="@+id/recycler_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            class="android.support.v7.widget.RecyclerView" />
    </LinearLayout>

</LinearLayout>