<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abhinav.qcards.QCardsActivity" >

    <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">
        
         
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/first_buttons" 
        android:id="@+id/first_time"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:clickable="true"
        card_view:elevation="50dp"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ft_quick"
            android:gravity="center" 
            android:textSize="@dimen/first_button"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>
</LinearLayout>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_weight="0.3">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/first_buttons" 
        android:id="@+id/get_cards"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:clickable="true"
        card_view:elevation="50dp"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/info_text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:text="@string/ft_watch"
            android:gravity="center" 
            android:textSize="@dimen/first_button"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>
</LinearLayout>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_weight="0.3">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/first_buttons" 
        android:id="@+id/jump_in"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:clickable="true"
        card_view:elevation="50dp"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/info_text2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:text="@string/ft_print"
            android:gravity="center" 
            android:textSize="@dimen/first_button"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>
</LinearLayout>
</LinearLayout>
